--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,15 @@
     <groupId>info.cukes</groupId>
     <artifactId>cucumber-junit</artifactId>
     <version>1.2.5</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.14.1</version>
+</dependency>
+
 
 
 	</dependencies>
